# SA-MP-MySQL

./: CMakeLists.txt  samp-plugin-mysql.vcxproj
cmake/: FindMySQLCConnector.cmake  Plugin.cmake
src/: CMakeLists.txt  main.cpp
